fix folder name issue and label spacing

--- a/src/components/upload-form/UploadForm.scss
+++ b/src/components/upload-form/UploadForm.scss
@@ -6,24 +6,24 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 16px;
+  padding: 1rem;
   border-top: 0.0625rem solid colors.$secondary-med;
 
   &__header {
     @include mixins.mobile-page-header; //this text is too bold vs mockup but no other font weights available
-    margin-top: 8px;
-    margin-bottom: 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0rem;
   }
 
   &__form {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 1rem;
   }
   &__form-cont {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    // gap: 1rem;
   }
   &__label-desc-cont {
     display: flex;
@@ -31,12 +31,13 @@
   }
 
   &__thumbnail {
-    border-radius: 4px;
+    border-radius: 0.25rem;
   }
 
   &__label {
     @include mixins.mobile-label-buttons;
     color: colors.$primary-med;
+    margin-top: 1rem;
     margin-bottom: 0.25rem;
   }
 
@@ -63,12 +64,12 @@
   &__buttons-cont {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 1rem;
   }
 
   &__button-cont {
     position: relative;
-    gap: 16px;
+    gap: 1rem;
   }
 
   &__submit {
@@ -122,14 +123,14 @@
 
 @include breakpoints.medium {
   .upload-form {
-    padding: 0px 36px 36px 36px;
+    padding: 0rem 2.25rem 2.25rem 2.25rem;
     border-top: 0.0625rem solid colors.$secondary-med;
 
     &__header {
       @include mixins.desk-tab-page-header; //this text is too bold vs mockup but no other font weights available
-      margin-top: 36px;
-      padding-bottom: 24px;
-      margin-bottom: 24px;
+      margin-top: 2.25rem;
+      padding-bottom: 1.5rem;
+      margin-bottom: 1.5rem;
       border-bottom: 0.0625rem solid colors.$secondary-med;
     }
 
@@ -147,14 +148,14 @@
 
     &__buttons-cont {
       flex-direction: row-reverse;
-      gap: 16px;
-      padding-top: 16px;
+      gap: 1rem;
+      padding-top: 1rem;
       border-top: 0.0625rem solid colors.$secondary-med;
     }
 
     &__button-cont {
-      width: 150px;
-      gap: 16px;
+      width: 9.375rem;
+      gap: 1rem;
     }
 
     &__submit {
@@ -162,7 +163,7 @@
     }
 
     &__cancel {
-      width: 150px;
+      width: 9.375rem;
       @include mixins.desk-tab-label-buttons;
     }
   }
@@ -170,17 +171,21 @@
 
 @include breakpoints.large {
   .upload-form {
-    padding: 0px 144px 36px 144px;
+    padding: 0rem 9rem 2.25rem 9rem;
     border-top: 0.0625rem solid colors.$secondary-med;
 
+    &__header {
+      margin-bottom: 1rem;
+    }
+
     &__form {
-      gap: 24px;
+      gap: 1.5rem;
     }
 
     &__img-fields-cont {
       display: flex;
       flex-direction: row;
-      gap: 24px;
+      gap: 1.5rem;
     }
     &__form-cont {
       width: 100%;
@@ -190,23 +195,23 @@
       flex: 1;
     }
     &__thumbnail {
-      width: 380px;
+      width: 23.75rem;
     }
 
     &__buttons-cont {
-      padding-top: 24px;
+      padding-top: 1.5rem;
     }
   }
 }
 
 .toast__success {
-  max-width: 250px; /* Set a default minimum width */
-  height: 40px;
+  max-width: 15.625rem; /* Set a default minimum width */
+  height: 2.5rem;
   @include mixins.mobile-label-buttons;
   background-color: #0095ff;
   color: #fff;
-  border-radius: 4px;
-  padding: 10px;
+  border-radius: 0.25rem;
+  padding: 0.625rem;
 
   position: fixed;
   z-index: 100;
@@ -224,13 +229,13 @@
     opacity: 0;
   }
   to {
-    top: 16px;
+    top: 1rem;
     opacity: 1;
   }
 }
 @keyframes fadeout {
   from {
-    top: 16px;
+    top: 1rem;
     opacity: 1;
   }
   to {
